# prog2

./: .clang-format  .editorconfig  .gitignore  .nvim.lua  dummy_bear.cpp  shell.nix  zip.sh
algel/dijkstra/: main.cpp
algel/mul_or_add/: main.cpp
ea01/: main.cpp
ea02/: main.cpp
ef01/: neptun.c
ef02/: swap.cpp
ef03/: max.hpp  nem_oo.cpp
ef04/: resistor.cpp
ef05/: Makefile  vektor.cpp  vektor.h
ef06/: ember.h  hallgato.cpp  main_mtrac
ef07/: Makefile  ustring.cpp  ustring.h
ef08/: Makefile  boltMain.cpp  kassza.cpp  kifli.h
ef09/: hetero_store.hpp
ef10/: Makefile  fancy_iterators.hpp  monoton.hpp  monoton_test.cpp
ef11/: Makefile  pstring.cpp  pstring.h  pstring_test  pstring_test.cpp
ef12/: bacterium.h  clonable_bacterium.h  clonable_hetero_store.hpp
examples/disable_copy/: main.cpp
examples/lambda/: main.cpp
examples/pure/: main.cpp
examples/set_to_null/: main.cpp
examples/std_version/: main.cpp
examples/templates/: main.cpp  template_template.hpp  template_template_template.hpp
examples/unget/: main.cpp
lab01/: f1.txt  fuggvenyeim.cpp  fuggvenyeim.h  main.cpp
lab02/string1/: string1.c
lab02/string2_cpp/: string2.cpp  string2.h
lab03/Komplex/: komplex.cpp
lab03/Teglalap/: teglalap.cpp
lab04/: resistor.cpp  resistor_test2.cpp
lab05/: Makefile  string5.cpp  string5.h
lab06/: Makefile  bicikli.h  bicikli_teszt0.cpp
lab07/: Makefile  alakzat.h  alakzat2_main.cpp  ellipszis.h  haromszog.h  rajztabla.cpp  rajztabla.h
lab08/generikus1/: alaptipus.hpp
lab08/halmaz/: halmaz_teszt.cpp  myset.hpp
lab09/genArray3/: Makefile  gen_array_iter3_test.cpp  memtrace.cpp  memtrace.h  sablonok.hpp
lab09/generikus2/: generikus2_teszt.cpp  sablonok.hpp
lab10/: Makefile  vektor.hpp  vektor_test  vektor_test.cpp
nhf/: .gitignore  AnimalPage.cpp  AnimalPage.hpp  AnimalsPage.cpp  AnimalsPage.hpp  App.cpp  App.hpp  CMakeLists.txt  Canvas.cpp  Canvas.hpp  Doxyfile  ListView.cpp  ListView.hpp  Makefile  OstreamCanvas.cpp  OstreamCanvas.hpp  OwnerPage.cpp  OwnerPage.hpp  OwnersPage.cpp  OwnersPage.hpp  README.md  VaccinationsPage.cpp  VaccinationsPage.hpp  View.cpp  View.hpp  animals  appview.cpp  appview.hpp  callback.hpp  canvas.cpp  canvas.hpp  constants.h  constants.hpp  data.cpp  data.hpp  econio.c  econio.cpp  econio.h  econio.hpp  entities.cpp  (+16 more)
nhf/scripts/: gen.py  zip.sh
sz1/: Makefile  allapotgep.cpp  allapotgep.h  genetika_teszt.cpp
sz2/: Makefile  ciphers.cpp  ciphers.h  test.cpp
sz3/: Makefile  pool.cpp  pool.h  rstring.cpp  rstring.h  test.cpp
sz4/: Makefile  allapotgep.hpp  komment.cpp  komment.hpp  main.cpp  split.cpp  split.hpp
(+5 files in other folders)
